--- a/inst/rmarkdown/templates/rmd_template.cellid/template.yaml
+++ b/inst/rmarkdown/templates/rmd_template.cellid/template.yaml
@@ -1,4 +1,4 @@
-name: Rcell2 CellID Notebook
+name: rcell2 Cell-ID Notebook
 description: >
    Workflow examples for the rcell2.cellid package.
 create_dir: FALSE
