--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cell.load.boundaries)
 export(cell2)
 export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
+export(check_and_fix_paths)
 export(get_workflow_template_cellid)
 export(imagej_fft_filter)
 export(load_tiff_masks)
