--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(make_scan_stacks)
 export(parameter_scan)
 export(parameters_default)
 export(parameters_write)
+export(plot_pos_overlaps)
 export(read_coords_tsv)
 export(read_tiff_masks)
 export(rename_mda)
@@ -28,6 +29,7 @@ export(tsv_paths_from_dir)
 import(doParallel)
 import(dplyr)
 import(foreach, except = c("when", "accumulate"))
+import(ggplot2)
 import(parallel)
 import(purrr)
 import(readr)
