--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
 export(check_and_fix_paths)
 export(get_workflow_template_cellid)
+export(ijm_open_hyperstack)
 export(imagej_fft_filter)
 export(load_tiff_masks)
 export(load_tsv_masks)
