fread is awesome

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(rename_mda)
 export(tiff_plane_info)
 export(tsv_paths_from_args)
 export(tsv_paths_from_dir)
+import(data.table)
 import(doParallel)
 import(dplyr)
 import(foreach, except = c("when", "accumulate"))
