run_fft_filter_on_bfs: new function to run the fft filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,12 +24,14 @@ export(plot_pos_overlaps)
 export(read_coords_tsv)
 export(read_tiff_masks)
 export(rename_mda)
+export(run_fft_filter_on_bfs)
 export(tiff_plane_info)
 export(tsv_paths_from_args)
 export(tsv_paths_from_dir)
 import(data.table)
 import(doParallel)
 import(dplyr)
+import(foreach)
 import(foreach, except = c("when", "accumulate"))
 import(ggplot2)
 import(parallel)
