--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cell2)
 export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
 export(check_and_fix_paths)
+export(get_cell_data)
 export(get_workflow_template_cellid)
 export(ijm_open_hyperstack)
 export(imagej_fft_filter)
