--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_and_fix_paths)
 export(get_cell_data)
 export(get_workflow_template_cellid)
 export(ijm_open_hyperstack)
+export(ijm_open_segmentation)
 export(imagej_fft_filter)
 export(load_tiff_masks)
 export(load_tsv_masks)
