--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ export(load_tsv_masks)
 export(make_scan_stacks)
 export(parameter_scan)
 export(parameters_default)
+export(parameters_help)
+export(parameters_help_df)
 export(parameters_write)
 export(plot_pos_overlaps)
 export(read_coords_tsv)
