add output_help and output_help_df

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(imagej_fft_filter)
 export(load_tiff_masks)
 export(load_tsv_masks)
 export(make_scan_stacks)
+export(output_help)
+export(output_help_df)
 export(parameter_scan)
 export(parameters_default)
 export(parameters_help)
