run document and update template

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_workflow_template_cellid)
 export(ijm_open_hyperstack)
 export(ijm_open_segmentation)
 export(imagej_fft_filter)
+export(join_mdas)
 export(load_tiff_masks)
 export(load_tsv_masks)
 export(make_scan_stacks)
@@ -31,6 +32,7 @@ export(plot_pos_overlaps)
 export(read_coords_tsv)
 export(read_tiff_masks)
 export(rename_mda)
+export(rename_mdas)
 export(run_fft_filter_on_bfs)
 export(tiff_plane_info)
 export(tsv_paths_from_args)
