fix compilation on newer gcc (implicit int type error) fix some warnings, ignore others

--- a/src/cellID/Makefile
+++ b/src/cellID/Makefile
@@ -1,5 +1,5 @@
 # gcc -Wall enables all compiler's warning messages.
-CFLAGS = -Wall
+CFLAGS = -Wall -Wno-unused-variable -Wno-unused-but-set-variable
 
 # Guia para incluir cosas:
 ## -I <include directory>
