split quick start and full guides

--- a/inst/rmarkdown/templates/rmd_template.cellid/template.yaml
+++ b/inst/rmarkdown/templates/rmd_template.cellid/template.yaml
@@ -1,5 +1,5 @@
-name: rcell2 Cell-ID Notebook
+name: rcell2 Cell-ID Notebook - Full Guide
 description: >
-   Workflow examples for the rcell2.cellid package.
+   Full workflow for the rcell2.cellid package.
 create_dir: FALSE
 
