mda_utils: add get_spos_template and make_stage_list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
 export(check_and_fix_paths)
 export(get_cell_data)
+export(get_spos_template)
 export(get_time_info)
 export(get_workflow_template_cellid)
 export(ijm_open_hyperstack)
@@ -21,6 +22,7 @@ export(join_mdas)
 export(load_tiff_masks)
 export(load_tsv_masks)
 export(make_scan_stacks)
+export(make_stage_list)
 export(output_help)
 export(output_help_df)
 export(parameter_scan)
@@ -46,6 +48,7 @@ import(ggplot2)
 import(parallel)
 import(purrr)
 import(readr)
+import(readxl)
 import(stringr)
 import(tidyr)
 importFrom(data.table,dcast)
