--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Imports:
     tibble (>= 3.1.6),
     tidyr (>= 1.2.0),
     here,
-    ggplot2
+    ggplot2,
+    readxl
 Suggests:
     skimr (>= 2.1.3),
     tidyverse (>= 1.3.1),
