extract "get_plane_info" from "plot_pos_overlaps"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
 export(check_and_fix_paths)
 export(get_cell_data)
+export(get_plane_info)
 export(get_spos_template)
 export(get_time_info)
 export(get_workflow_template_cellid)
