--- a/.github/workflows/compile-cell-id.yml
+++ b/.github/workflows/compile-cell-id.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install build tools
-      run: sudo apt-get update && sudo apt-get install -y build-essential
+      run: sudo apt-get update && sudo apt-get install -y build-essential libtiff-dev
 
     - name: Compile C code
       working-directory: src/cellID
