--- a/.github/workflows/compile-cell-id.yml
+++ b/.github/workflows/compile-cell-id.yml
@@ -20,8 +20,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y build-essential libtiff-dev
 
     - name: Compile C code
-      working-directory: src/cellID
-      run: make
+      working-directory: src
+      run: make -f Makevars cellid
 
     - name: Verify compilation
       run: |
