--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(imagej_fft_filter)
 export(join_mdas)
 export(load_tiff_masks)
 export(load_tsv_masks)
+export(make_pdata)
 export(make_scan_stacks)
 export(make_stage_list)
 export(output_help)
