export read_stg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(parameters_help_df)
 export(parameters_write)
 export(plot_pos_overlaps)
 export(read_coords_tsv)
+export(read_stg)
 export(read_tiff_masks)
 export(rename_mda)
 export(rename_mdas)
