--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(arguments_check)
 export(arguments_summary)
 export(arguments_to_images)
 export(cell.load.alt)
-export(cell.load.boundaries)
+export(get_cell_boundaries)
 export(cell2)
 export(cellid_output_descriptions)
 export(cellid_parameter_descriptions)
