check_and_fix_paths: better logic, support multiple alternate paths
raise error if no paths are provided and images are missing, or if not
all images could be fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ import(tidyr)
 importFrom(data.table,dcast)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
+importFrom(dplyr,first)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
