grid_to_long: add docstring and export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_plane_info)
 export(get_spos_template)
 export(get_time_info)
 export(get_workflow_template_cellid)
+export(grid_to_long)
 export(ijm_open_hyperstack)
 export(ijm_open_segmentation)
 export(imagej_fft_filter)
